--- a/src/app/components/nearby-panel/nearby-panel.scss
+++ b/src/app/components/nearby-panel/nearby-panel.scss
@@ -1,12 +1,14 @@
+:host {
+  @media (max-width: 767px) {
+    display: none;
+  }
+}
+
 .nearby-fab {
   position: fixed;
   bottom: 5.5rem;
   right: 1.25rem;
   z-index: 90;
-
-  @media (max-width: 767px) {
-    bottom: calc(var(--tab-bar-height) + var(--safe-bottom) + 4.5rem);
-  }
 
   &__btn {
     width: 44px;
