--- a/src/styles.scss
+++ b/src/styles.scss
@@ -84,7 +84,7 @@ body {
   transition: background-color 0.3s ease, color 0.3s ease;
 
   @media (max-width: 767px) {
-    padding-bottom: calc(var(--tab-bar-height) + var(--safe-bottom));
+    padding-bottom: calc(var(--tab-bar-height) + 40px + var(--safe-bottom));
   }
 }
 
